--- a/dashboards/crypto_charts.yaml
+++ b/dashboards/crypto_charts.yaml
@@ -96,7 +96,7 @@ sections:
               wick:
                 useFillColor: true
         series:
-          - entity: sensor.crypto_inspect_btc_price
+          - entity: sensor.crypto_inspect_prices
             name: OHLC
             type: candlestick
             data_generator: |
@@ -159,7 +159,7 @@ sections:
               wick:
                 useFillColor: true
         series:
-          - entity: sensor.crypto_inspect_btc_price
+          - entity: sensor.crypto_inspect_prices
             name: OHLC
             type: candlestick
             data_generator: |
@@ -221,7 +221,7 @@ sections:
               wick:
                 useFillColor: true
         series:
-          - entity: sensor.crypto_inspect_btc_price
+          - entity: sensor.crypto_inspect_prices
             name: OHLC
             type: candlestick
             data_generator: |
@@ -284,7 +284,7 @@ sections:
               wick:
                 useFillColor: true
         series:
-          - entity: sensor.crypto_inspect_btc_price
+          - entity: sensor.crypto_inspect_prices
             name: OHLC
             type: candlestick
             data_generator: |
@@ -331,7 +331,7 @@ sections:
           colors:
             - '#546E7A'
         series:
-          - entity: sensor.crypto_inspect_btc_price
+          - entity: sensor.crypto_inspect_prices
             name: Volume
             type: column
             data_generator: |
