--- a/build.yaml
+++ b/build.yaml
@@ -2,9 +2,9 @@
 # https://developers.home-assistant.io/docs/add-ons/configuration#add-on-extended-build
 
 build_from:
-  aarch64: ghcr.io/home-assistant/aarch64-base-python:3.13-alpine3.21
-  amd64: ghcr.io/home-assistant/amd64-base-python:3.13-alpine3.21
-  armv7: ghcr.io/home-assistant/armv7-base-python:3.13-alpine3.21
+  aarch64: ghcr.io/home-assistant/aarch64-base-debian:bookworm
+  amd64: ghcr.io/home-assistant/amd64-base-debian:bookworm
+
 
 labels:
   org.opencontainers.image.title: "Crypto Inspect"
