fix: DB connection resilience and sensor initialization
- Add pool_pre_ping=True for auto-reconnect on stale connections
- Add pool_recycle=300 to refresh connections every 5 minutes
- Add retry with exponential backoff in candlestick buffer (3 attempts)
- Add ConnectError handling with retry in http_client
- Fix test_scheduler_jobs to mock get_currency_list_async correctly

--- a/alembic.ini
+++ b/alembic.ini
@@ -1,7 +1,7 @@
 [alembic]
 script_location = alembic
 prepend_sys_path = src
-sqlalchemy.url = postgresql://postgres:postgres@localhost:5432/crypto_inspect
+sqlalchemy.url = postgresql://crypto_user:C3uX%%WNa8#J!0^OR@192.168.1.25:5432/crypto_inspector
 
 [post_write_hooks]
 
