fix: Update sensors to return all currencies instead of BTC only
- exchange_netflows: returns BTC and ETH net flows
- volatility_30d: returns volatility for all currencies from currency list
- arb_spreads: returns spreads for BTC, ETH, SOL from arbitrage scanner

Installed plotly (already in deps, was missing in venv)

--- a/config.yaml
+++ b/config.yaml
@@ -3,7 +3,7 @@
 
 name: "Crypto Inspect"
 description: "Сбор и анализ данных криптовалютных свечей"
-version: 0.2.34
+version: "0.2.35"
 slug: "crypto_inspect"
 url: "https://github.com/Mesteriis/crypto-inspector"
 init: false
