--- a/config.yaml
+++ b/config.yaml
@@ -3,7 +3,7 @@
 
 name: "Crypto Inspect"
 description: "Сбор и анализ данных криптовалютных свечей"
-version: "0.2.39"
+version: "1.0.0"
 slug: "crypto_inspect"
 url: "https://github.com/Mesteriis/crypto-inspector"
 init: false
@@ -111,4 +111,4 @@ map:
   - share:rw
 
 startup: services
-stage: experimental
+stage: stable
